samples/_failures_safe/1761467919_e2376c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae97d458.c: In function ‘main’:
./samples/SAFE/__tmp_ae97d458.c:182:5: error: expected expression at end of input
  182 |     if (len > 0 && input[len -
      |     ^~
./samples/SAFE/__tmp_ae97d458.c:182:5: error: expected declaration or statement at end of input
